Finished Nav Bar

--- a/weekOneProject/index.html
+++ b/weekOneProject/index.html
@@ -13,17 +13,18 @@
 </head>
 
 <body>
-    <header>
-    <nav>
-      <img src="../weekOneProject/images/bent-creek-logo.png" alt="">
-      <a href="../weekOneProject/index.html">Home</a>
-      <a href="../weekOneProject/About.html">About</a>
-      <a href="../weekOneProject/Newsletter.html">Newsletter</a>
-    </nav>
+  <header>
+    <img id="logo" src="../weekOneProject/images/bent-creek-logo.png" alt="">
+    <nav id="mainNav">
+        <a href="../weekOneProject/index.html">Home</a>
+        <a href="../weekOneProject/About.html">About</a>
+        <a href="../weekOneProject/Newsletter.html">Newsletter</a>
+      </nav>
   </header>
-    <h1>Bent Creek Ceramics</h1>
 
-    <h2>Where art meets nature</h2>
+  <h1>Bent Creek Ceramics</h1>
+
+  <h2>Where art meets nature</h2>
   <section>
 
     <img src="../weekOneProject/images/product-1.jpg" alt="">
