Sized pictures and ready to style labels and flex to align

--- a/weekOneProject/index.html
+++ b/weekOneProject/index.html
@@ -16,33 +16,36 @@
   <header>
     <img id="logo" src="../weekOneProject/images/bent-creek-logo.png" alt="">
     <nav id="mainNav">
-        <a href="../weekOneProject/index.html">Home</a>
-        <a href="../weekOneProject/About.html">About</a>
-        <a href="../weekOneProject/Newsletter.html">Newsletter</a>
-      </nav>
+      <a href="../weekOneProject/index.html">Home</a>
+      <a href="../weekOneProject/About.html">About</a>
+      <a href="../weekOneProject/Newsletter.html">Newsletter</a>
+    </nav>
   </header>
+  <div id="mainWrapper">
+    <div class="heading">
 
-  <h1>Bent Creek Ceramics</h1>
+      <h1>Bent Creek Ceramics</h1>
 
-  <h2>Where art meets nature</h2>
-  <section>
+      <h2>Where art meets nature</h2>
 
-    <img src="../weekOneProject/images/product-1.jpg" alt="">
-    <h3>Endless Possibilities</h3>
-    <img src="../weekOneProject/images/product-2.jpg" alt="">
-    <h3>Sets</h3>
-    <img src="../weekOneProject/images/product-3.jpg" alt="">
-    <h3>Textures</h3>
-    <img src="../weekOneProject/images/product-4.jpg" alt="">
-    <h3>Tea Time</h3>
-    <img src="../weekOneProject/images/product-5.jpg" alt="">
-    <h3>Jars and Containers</h3>
-    <img src="../weekOneProject/images/product-6.jpg" alt="">
-    <h3>Wasabi and Saki</h3>
-    <img src="../weekOneProject/images/product-7.jpg" alt="">
-    <h3>Sippin' on Sunshine</h3>
-
-  </section>
+    </div>
+    <section>
+      <img class="photo1" src="../weekOneProject/images/product-1.jpg" alt="">
+      <h3>Endless Possibilities</h3>
+      <img class="photo2" src="../weekOneProject/images/product-2.jpg" alt="">
+      <h3>Sets</h3>
+      <img class="photo3" src="../weekOneProject/images/product-3.jpg" alt="">
+      <h3>Textures</h3>
+      <img class="photo4" src="../weekOneProject/images/product-4.jpg" alt="">
+      <h3>Tea Time</h3>
+      <img class="photo5" src="../weekOneProject/images/product-5.jpg" alt="">
+      <h3>Jars and Containers</h3>
+      <img class="photo6" src="../weekOneProject/images/product-6.jpg" alt="">
+      <h3>Wasabi and Saki</h3>
+      <img class="photo7" src="../weekOneProject/images/product-7.jpg" alt="">
+      <h3>Sippin' on Sunshine</h3>
+    </section>
+  </div>
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
