added footer to about and newsletter page.

--- a/weekOneProject/About.html
+++ b/weekOneProject/About.html
@@ -22,6 +22,12 @@
       <a href="../weekOneProject/Newsletter.html">Newsletter</a>
     </nav>
   </header>
+
+
+
+  <footer>
+    Copyright 2017, Bent Creek Ceramics
+  </footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
