--- a/weekOneProject/Newsletter.html
+++ b/weekOneProject/Newsletter.html
@@ -24,6 +24,18 @@
   </header>
 
 
+  Sign Up for Our Weekly Newsletter
+
+  Stay up to date with events, activities, news and specials.
+
+  Name
+
+  Email
+
+  Submit
+
+  Copyright 2017, Bent Creek Ceramics
+
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
