--- a/weekOneProject/index.html
+++ b/weekOneProject/index.html
@@ -29,29 +29,46 @@
       <h2>Where art meets nature</h2>
 
     </div>
-    <section>
+    <div class="photos">
       <img class="photo1" src="../weekOneProject/images/product-1.jpg" alt="">
-      <h3>Endless Possibilities</h3>
       <img class="photo2" src="../weekOneProject/images/product-2.jpg" alt="">
-      <h3>Sets</h3>
       <img class="photo3" src="../weekOneProject/images/product-3.jpg" alt="">
-      <h3>Textures</h3>
       <img class="photo4" src="../weekOneProject/images/product-4.jpg" alt="">
-      <h3>Tea Time</h3>
       <img class="photo5" src="../weekOneProject/images/product-5.jpg" alt="">
-      <h3>Jars and Containers</h3>
       <img class="photo6" src="../weekOneProject/images/product-6.jpg" alt="">
-      <h3>Wasabi and Saki</h3>
       <img class="photo7" src="../weekOneProject/images/product-7.jpg" alt="">
-      <h3>Sippin' on Sunshine</h3>
-    </section>
+    </div>
+  </div>
+  <div class="labels">
+    <h3>Endless Possibilities</h3>
+    <h3>Sets</h3>
+    <h3>Textures</h3>
+    <h3>Tea Time</h3>
+    <h3>Jars and Containers</h3>
+    <h3>Wasabi and Saki</h3>
+    <h3>Sippin' on Sunshine</h3>
   </div>
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
   </footer>
 
-
+  <script type="text/javascript">
+    var nameInput = document.getElementById('nameInput');
+    var emailInput = document.getElementById('emailInput');
+    var signupButton = document.getElementById('signupButton');
+    signupButton.addEventListener('click', function(e) {
+      var nameVal = nameInput.value;
+      var emailVal = emailInput.value;
+      if (nameVal && emailVal) {
+        alert('Thanks for signing up, ' + nameVal + '. Newsletters will be sent to ' + emailVal);
+        nameInput.value = "";
+        emailInput.value = "";
+      } else {
+        alert('We would love for you to sign up, please provide both your name and email address.');
+      }
+    });
+  </script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
