--- a/weekOneProject/index.html
+++ b/weekOneProject/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css">
   <link rel="stylesheet" href="../weekOneProject/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
 </head>
 
 <body>
@@ -21,18 +22,19 @@
       <a href="../weekOneProject/Newsletter.html">Newsletter</a>
     </nav>
   </header>
-  <div id="mainWrapper">
+  <div class="wrapper">
     <div class="heading">
 
       <h1>Bent Creek Ceramics</h1>
 
       <h2>Where art meets nature</h2>
-
     </div>
-    <div class="photos">
-      <img class="photo1" src="../weekOneProject/images/product-1.jpg" alt="">
-      <img class="photo2" src="../weekOneProject/images/product-2.jpg" alt="">
-      <img class="photo3" src="../weekOneProject/images/product-3.jpg" alt="">
+  </div>
+  <div class="photos1">
+    <img class="photo1" src="../weekOneProject/images/product-1.jpg" alt="">
+    <img class="photo2" src="../weekOneProject/images/product-2.jpg" alt="">
+    <img class="photo3" src="../weekOneProject/images/product-3.jpg" alt="">
+    <div class="photos2">
       <img class="photo4" src="../weekOneProject/images/product-4.jpg" alt="">
       <img class="photo5" src="../weekOneProject/images/product-5.jpg" alt="">
       <img class="photo6" src="../weekOneProject/images/product-6.jpg" alt="">
@@ -40,20 +42,34 @@
     </div>
   </div>
   <div class="labels">
-    <h3>Endless Possibilities</h3>
-    <h3>Sets</h3>
-    <h3>Textures</h3>
-    <h3>Tea Time</h3>
-    <h3>Jars and Containers</h3>
-    <h3>Wasabi and Saki</h3>
-    <h3>Sippin' on Sunshine</h3>
+    <div class="label1">
+      <h3>Endless Possibilities</h3>
+    </div>
+    <div class="label2">
+      <h3>Sets</h3>
+    </div>
+    <div class="label3">
+      <h3>Textures</h3>
+    </div>
+    <div class="label4">
+      <h3>Tea Time</h3>
+    </div>
+    <div class="label5">
+      <h3>Jars and Containers</h3>
+    </div>
+    <div class="label6">
+      <h3>Wasabi and Saki</h3>
+    </div>
+    <div class="label7">
+      <h3>Sippin' on Sunshine</h3>
+    </div>
   </div>
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
   </footer>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var nameInput = document.getElementById('nameInput');
     var emailInput = document.getElementById('emailInput');
     var signupButton = document.getElementById('signupButton');
@@ -68,7 +84,7 @@
         alert('We would love for you to sign up, please provide both your name and email address.');
       }
     });
-  </script>
+  </script> -->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
