Finished newsletter but need to fix main index CSS side effects and about

--- a/weekOneProject/Newsletter.html
+++ b/weekOneProject/Newsletter.html
@@ -23,23 +23,24 @@
       <a href="../weekOneProject/Newsletter.html">Newsletter</a>
     </nav>
   </header>
-  <div class="wrapper">
-    <div class="newsletter">
+  <div class="newsletter">
+    <div class="">
+
+    </div>
+    <div id="submitBox">
+      <div class="submitHeading">
       <h2>Sign Up for Our Weekly Newsletter</h2>
       <h3>Stay up to date with events, activities, news and specials.</h3>
-
+        </div>
       <form class="signup" action="/newsletter-signup" method="post">
         <div>
           <input type="text" id="name" name="user_name" placeholder="Name">
         </div>
-        <div><input type="email" id="mail" name="user_mail" placeholder="Email"></div>
+        <div><input type="email" id="email" name="user_mail" placeholder="Email"></div>
         <div><button type="submit" name="submit">Submit</button></div>
       </form>
     </div>
   </div>
-  <footer>
-    Copyright 2017, Bent Creek Ceramics
-  </footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
