--- a/weekOneProject/About.html
+++ b/weekOneProject/About.html
@@ -27,7 +27,7 @@
   <div class="wrapper">
     <h1>A Community of Artists</h1>
 
-    <p>Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    <p><img class="birdhouse" src="../weekOneProject/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
     <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives." -Jenn Wilson (Founder)</blockquote>
@@ -37,7 +37,9 @@
     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
       voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 
-    Room to Grow
+      <div class="photoBreak">
+        <span>Room to Grow</span>
+      </div>
 
     <h3>Facilities</h3>
 
