--- a/weekOneProject/About.html
+++ b/weekOneProject/About.html
@@ -36,19 +36,25 @@
 
     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
       voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+    </div>
 
       <div class="photoBreak">
         <span>Room to Grow</span>
       </div>
 
+      <div class="asideFlex">
+      <div id="facilities">
     <h3>Facilities</h3>
 
     <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
       ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+</div>
 
     <div class="aside">
+      <img class="asidephoto" src="../weekOneProject/images/background-1.jpg" alt="">
       <p>Every member has access to shelf space and all of the studio's shared equipment.</P>
     </div>
+  </div>
 
     <table>
       <tr>
@@ -72,7 +78,6 @@
         <td>Unlimited Access</td>
       </tr>
     </table>
-  </div>
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
