Finished project, labels inparticular, also cleaned and orginized code.

--- a/Newsletter.html
+++ b/Newsletter.html
@@ -29,15 +29,15 @@
     </div>
     <div id="submitBox">
       <div class="submitHeading">
-      <h2>Sign Up for Our Weekly Newsletter</h2>
-      <h3>Stay up to date with events, activities, news and specials.</h3>
-        </div>
+        <h2>Sign Up for Our Weekly Newsletter</h2>
+        <h3>Stay up to date with events, activities, news and specials.</h3>
+      </div>
       <form class="signup" action="/newsletter-signup" method="post">
         <div>
-          <input type="text" id="name" name="user_name" placeholder="Name">
+          <input type="text" id="nameInput" name="user_name" placeholder="Name">
         </div>
-        <div><input type="email" id="email" name="user_mail" placeholder="Email"></div>
-        <div><button type="submit" name="submit">Submit</button></div>
+        <div><input type="email" id="emailInput" name="user_mail" placeholder="Email"></div>
+        <div><button type="submit" id="signupButton" name="submit">Submit</button></div>
       </form>
     </div>
   </div>
