--- a/index.html
+++ b/index.html
@@ -31,45 +31,35 @@
     </div>
   </div>
   <div class="photos1">
-    <img class="photo1" src="../weekOneProject/images/product-1.jpg" alt="">
-    <img class="photo2" src="../weekOneProject/images/product-2.jpg" alt="">
-    <img class="photo3" src="../weekOneProject/images/product-3.jpg" alt="">
-  </div>
-    <div class="photos2">
-      <img class="photo4" src="../weekOneProject/images/product-4.jpg" alt="">
-      <img class="photo5" src="../weekOneProject/images/product-5.jpg" alt="">
-      <img class="photo6" src="../weekOneProject/images/product-6.jpg" alt="">
-      <img class="photo7" src="../weekOneProject/images/product-7.jpg" alt="">
+    <div class="photo1">
+      <span>Endless Possibilities</span>
     </div>
-  <div class="labels">
-    <div class="label1">
-      <h3>Endless Possibilities</h3>
+    <div class="photo2">
+      <span id="smallLabel">Sets</span>
     </div>
-    <div class="label2">
-      <h3>Sets</h3>
-    </div>
-    <div class="label3">
-      <h3>Textures</h3>
-    </div>
-    <div class="label4">
-      <h3>Tea Time</h3>
-    </div>
-    <div class="label5">
-      <h3>Jars and Containers</h3>
-    </div>
-    <div class="label6">
-      <h3>Wasabi and Saki</h3>
-    </div>
-    <div class="label7">
-      <h3>Sippin' on Sunshine</h3>
+    <div class="photo3">
+      <span id="smallLabel">Textures</span>
     </div>
   </div>
-
+  <div class="photos2">
+    <div class="photo4">
+      <span id="smallLabel">Tea Time</span>
+    </div>
+    <div class="photo5">
+      <span>Jars and Containers</span>
+    </div>
+    <div class="photo6">
+      <span>Wasabi and Saki</span>
+    </div>
+    <div class="photo7">
+      <span>Sippin' on Sunshine</span>
+    </div>
+  </div>
   <footer>
     Copyright 2017, Bent Creek Ceramics
   </footer>
 
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     var nameInput = document.getElementById('nameInput');
     var emailInput = document.getElementById('emailInput');
     var signupButton = document.getElementById('signupButton');
@@ -84,7 +74,7 @@
         alert('We would love for you to sign up, please provide both your name and email address.');
       }
     });
-  </script> -->
+  </script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
