--- a/About.html
+++ b/About.html
@@ -27,8 +27,9 @@
   <div class="wrapper">
     <h1>A Community of Artists</h1>
 
-    <p><img class="birdhouse" src="../weekOneProject/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p><img class="birdhouse" src="../weekOneProject/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+      esse cillum dolore eu fugiat nulla pariatur.</p>
 
     <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives." -Jenn Wilson (Founder)</blockquote>
 
@@ -36,19 +37,19 @@
 
     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
       voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+  </div>
+
+  <div class="photoBreak">
+    <span id="breakLabel">Room to Grow</span>
+  </div>
+
+  <div class="asideFlex">
+    <div id="facilities">
+      <h3>Facilities</h3>
+
+      <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
     </div>
-
-      <div class="photoBreak">
-        <span>Room to Grow</span>
-      </div>
-
-      <div class="asideFlex">
-      <div id="facilities">
-    <h3>Facilities</h3>
-
-    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-      ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
-</div>
 
     <div class="aside">
       <img class="asidephoto" src="../weekOneProject/images/background-1.jpg" alt="">
@@ -56,28 +57,28 @@
     </div>
   </div>
 
-    <table>
-      <tr>
-        <th>Plan</th>
-        <th>Price</th>
-        <th>Access</th>
-      </tr>
-      <tr>
-        <td>Desk Only</td>
-        <td>$50/mo.</td>
-        <td>Business Hours + Weekly Kiln Access</td>
-      </tr>
-      <tr>
-        <td>Desk + Storage</td>
-        <td>$100/mo.</td>
-        <td>Business Hours + Weekly Kiln Access</td>
-      </tr>
-      <tr>
-        <td>Unlimited</td>
-        <td>$150/mo.</td>
-        <td>Unlimited Access</td>
-      </tr>
-    </table>
+  <table>
+    <tr>
+      <th>Plan</th>
+      <th>Price</th>
+      <th>Access</th>
+    </tr>
+    <tr>
+      <td>Desk Only</td>
+      <td>$50/mo.</td>
+      <td>Business Hours + Weekly Kiln Access</td>
+    </tr>
+    <tr>
+      <td>Desk + Storage</td>
+      <td>$100/mo.</td>
+      <td>Business Hours + Weekly Kiln Access</td>
+    </tr>
+    <tr>
+      <td>Unlimited</td>
+      <td>$150/mo.</td>
+      <td>Unlimited Access</td>
+    </tr>
+  </table>
 
   <footer>
     Copyright 2017, Bent Creek Ceramics
