--- a/About.html
+++ b/About.html
@@ -10,24 +10,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css">
-  <link rel="stylesheet" href="../weekOneProject/styles.css">
+  <link rel="stylesheet" href="../potteryPage/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <img id="logo" src="../weekOneProject/images/bent-creek-logo.png" alt="">
+    <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="">
     <nav id="mainNav">
-      <a href="../weekOneProject/index.html">Home</a>
-      <a href="../weekOneProject/About.html">About</a>
-      <a href="../weekOneProject/Newsletter.html">Newsletter</a>
+      <a href="../potteryPage/index.html">Home</a>
+      <a href="../potteryPage/About.html">About</a>
+      <a href="../potteryPage/Newsletter.html">Newsletter</a>
     </nav>
   </header>
   <div class="wrapper">
     <h1>A Community of Artists</h1>
 
-    <p><img class="birdhouse" src="../weekOneProject/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur
+    <p><img class="birdhouse" src="../potteryPage/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
       esse cillum dolore eu fugiat nulla pariatur.</p>
 
@@ -52,7 +52,7 @@
     </div>
 
     <div class="aside">
-      <img class="asidephoto" src="../weekOneProject/images/background-1.jpg" alt="">
+      <img class="asidephoto" src="../potteryPage/images/background-1.jpg" alt="">
       <p>Every member has access to shelf space and all of the studio's shared equipment.</P>
     </div>
   </div>
