--- a/Newsletter.html
+++ b/Newsletter.html
@@ -10,17 +10,17 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css">
-  <link rel="stylesheet" href="../weekOneProject/styles.css">
+  <link rel="stylesheet" href="../potteryPage/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <img id="logo" src="../weekOneProject/images/bent-creek-logo.png" alt="">
+    <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="">
     <nav id="mainNav">
-      <a href="../weekOneProject/index.html">Home</a>
-      <a href="../weekOneProject/About.html">About</a>
-      <a href="../weekOneProject/Newsletter.html">Newsletter</a>
+      <a href="../potteryPage/index.html">Home</a>
+      <a href="../potteryPage/About.html">About</a>
+      <a href="../potteryPage/Newsletter.html">Newsletter</a>
     </nav>
   </header>
   <div class="newsletter">
