--- a/About.html
+++ b/About.html
@@ -1,92 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>About</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css" />
+    <link rel="stylesheet" href="../potteryPage/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About</title>
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css">
-  <link rel="stylesheet" href="../potteryPage/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
-</head>
+  <body>
+    <header>
+      <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="" />
+      <nav id="mainNav">
+        <a href="../potteryPage/index.html">Home</a>
+        <a href="../potteryPage/About.html">About</a>
+        <a href="../potteryPage/Newsletter.html">Newsletter</a>
+      </nav>
+    </header>
+    <div class="wrapper">
+      <h1>A Community of Artists</h1>
 
-<body>
+      <p>
+        <img class="birdhouse" src="../potteryPage/images/birdhouse.jpg" alt="Handmade birdhouse." />Our studio, established in 1989, has
+        been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur.
+      </p>
 
-  <header>
-    <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="">
-    <nav id="mainNav">
-      <a href="../potteryPage/index.html">Home</a>
-      <a href="../potteryPage/About.html">About</a>
-      <a href="../potteryPage/Newsletter.html">Newsletter</a>
-    </nav>
-  </header>
-  <div class="wrapper">
-    <h1>A Community of Artists</h1>
+      <blockquote>
+        "Our mission is to provide people with beautiful, functional items which enhance lives." -Jenn Wilson (Founder)
+      </blockquote>
 
-    <p><img class="birdhouse" src="../potteryPage/images/birdhouse.jpg" alt="Handmade birdhouse.">Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-      esse cillum dolore eu fugiat nulla pariatur.</p>
+      <h3>History</h3>
 
-    <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives." -Jenn Wilson (Founder)</blockquote>
-
-    <h3>History</h3>
-
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-      voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-  </div>
-
-  <div class="photoBreak">
-    <span id="breakLabel">Room to Grow</span>
-  </div>
-
-  <div class="asideFlex">
-    <div id="facilities">
-      <h3>Facilities</h3>
-
-      <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
+        ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
     </div>
 
-    <div class="aside">
-      <img class="asidephoto" src="../potteryPage/images/background-1.jpg" alt="">
-      <p>Every member has access to shelf space and all of the studio's shared equipment.</P>
+    <div class="photoBreak">
+      <span id="breakLabel">Room to Grow</span>
     </div>
-  </div>
 
-  <table>
-    <tr>
-      <th>Plan</th>
-      <th>Price</th>
-      <th>Access</th>
-    </tr>
-    <tr>
-      <td>Desk Only</td>
-      <td>$50/mo.</td>
-      <td>Business Hours + Weekly Kiln Access</td>
-    </tr>
-    <tr>
-      <td>Desk + Storage</td>
-      <td>$100/mo.</td>
-      <td>Business Hours + Weekly Kiln Access</td>
-    </tr>
-    <tr>
-      <td>Unlimited</td>
-      <td>$150/mo.</td>
-      <td>Unlimited Access</td>
-    </tr>
-  </table>
+    <div class="asideFlex">
+      <div id="facilities">
+        <h3>Facilities</h3>
 
-  <footer>
-    Copyright 2017, Bent Creek Ceramics
-  </footer>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</body>
+        <p>
+          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+          tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+          ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.
+        </p>
+      </div>
 
+      <div class="aside">
+        <img class="asidephoto" src="../potteryPage/images/background-1.jpg" alt="" />
+        <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
+      </div>
+    </div>
+
+    <table>
+      <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Access</th>
+      </tr>
+      <tr>
+        <td>Desk Only</td>
+        <td>$50/mo.</td>
+        <td>Business Hours + Weekly Kiln Access</td>
+      </tr>
+      <tr>
+        <td>Desk + Storage</td>
+        <td>$100/mo.</td>
+        <td>Business Hours + Weekly Kiln Access</td>
+      </tr>
+      <tr>
+        <td>Unlimited</td>
+        <td>$150/mo.</td>
+        <td>Unlimited Access</td>
+      </tr>
+    </table>
+
+    <footer>
+      Copyright 2017, Bent Creek Ceramics
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
