--- a/Newsletter.html
+++ b/Newsletter.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Newsletter</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css" />
+    <link rel="stylesheet" href="../potteryPage/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Newsletter</title>
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css">
-  <link rel="stylesheet" href="../potteryPage/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
-</head>
-
-<body>
-  <header>
-    <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="">
-    <nav id="mainNav">
-      <a href="../potteryPage/index.html">Home</a>
-      <a href="../potteryPage/About.html">About</a>
-      <a href="../potteryPage/Newsletter.html">Newsletter</a>
-    </nav>
-  </header>
-  <div class="newsletter">
-    <div class="">
-
-    </div>
-    <div id="submitBox">
-      <div class="submitHeading">
-        <h2>Sign Up for Our Weekly Newsletter</h2>
-        <h3>Stay up to date with events, activities, news and specials.</h3>
-      </div>
-      <form class="signup" action="/newsletter-signup" method="post">
-        <div>
-          <input type="text" id="nameInput" name="user_name" placeholder="Name">
+  <body>
+    <header>
+      <img id="logo" src="../potteryPage/images/bent-creek-logo.png" alt="" />
+      <nav id="mainNav">
+        <a href="../potteryPage/index.html">Home</a>
+        <a href="../potteryPage/About.html">About</a>
+        <a href="../potteryPage/Newsletter.html">Newsletter</a>
+      </nav>
+    </header>
+    <div class="newsletter">
+      <div class=""></div>
+      <div id="submitBox">
+        <div class="submitHeading">
+          <h2>Sign Up for Our Weekly Newsletter</h2>
+          <h3>Stay up to date with events, activities, news and specials.</h3>
         </div>
-        <div><input type="email" id="emailInput" name="user_mail" placeholder="Email"></div>
-        <div><button type="submit" id="signupButton" name="submit">Submit</button></div>
-      </form>
+        <form class="signup" action="/newsletter-signup" method="post">
+          <div>
+            <input type="text" id="nameInput" name="user_name" placeholder="Name" />
+          </div>
+          <div><input type="email" id="emailInput" name="user_mail" placeholder="Email" /></div>
+          <div><button type="submit" id="signupButton" name="submit">Submit</button></div>
+        </form>
+      </div>
     </div>
-  </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</body>
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
